--- a/index.html
+++ b/index.html
@@ -1,33 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <body>
+    <main>
+      <article class="card-wrapper">
+        <a href="#" target="_blank" class="img-wrapper">
+          <img
+            src="https://plus.unsplash.com/premium_photo-1675282443407-b9c9ada52b82?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y3ViZXxlbnwwfHwwfHx8MA%3D%3D"
+            alt=""
+            class="card-img"
+          />
+        </a>
+        <h1 class="card-title"><a href="#">Equilibrium #3429</a></h1>
+        <p class="card-description">
+          Out Equilibrium collection promotes balance and calm.
+        </p>
+        <div class="card-price flex-container">
+          <p class="price flex-container">
+            <i class="fa-solid fa-diamond"></i>0.041ETH
+          </p>
+          <p class="time flex-container">
+            <i class="fa-solid fa-clock"></i>3 days left
+          </p>
+        </div>
+        <hr />
+        <div class="author flex-container">
+          <img
+            src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
+            alt="Jules Wyvern"
+            class="author-img"
+          />
+          <p class="author-info">
+            <span class="opacity">Creation of</span>
+            <span><a href="#" class="author-name">Jules Wyvern</a></span>
+          </p>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
