--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             alt="Jules Wyvern"
             class="author-img"
           />
-          <p class="author-info">Creation of</span>
-            <span><a href="#" class="author-name">Jules Wyvern</a></span>
+          <p class="author-info">
+            Creation of<span
+              ><a href="#" class="author-name">Jules Wyvern</a></span
+            >
           </p>
         </div>
       </article>
