--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
             class="author-img"
           />
           <p class="author-info">
-            Creation of<span
-              ><a href="#" class="author-name">Jules Wyvern</a></span
-            >
+            Creation of
+            <span><a href="#" class="author-name">Jules Wyvern</a></span>
           </p>
         </div>
       </article>
