--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
   <body>
     <main>
       <article class="card-wrapper">
-        <a href="#" target="_blank" class="img-wrapper">
+        <a
+          href="#"
+          aria-label="Learn more about the Equilibrium collection"
+          target="_blank"
+          class="img-wrapper"
+        >
           <img
             src="https://plus.unsplash.com/premium_photo-1675282443407-b9c9ada52b82?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y3ViZXxlbnwwfHwwfHx8MA%3D%3D"
             alt=""
